# fakedata-backend

./: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  tbump.toml
.github/workflows/: codeql-analysis.yml  dependabot-pr.yml  dependabot_pr.yml  dependabot_testing.yml  docker-build.yml  docker_build.yml  docker_production.yml  testing.yml
app/: __init__.py  config.py  db.py  enums.py  main.py  middlewares.py  server.py
app/helpers/: event.py  factory.py  send_event.py
app/models/db/: event.py
app/models/schema/: address.py  healthcheck.py  person.py  uuid.py
app/providers/: address.py  uuid.py
app/repository/: event.py  repository.py
app/responses/: address.py  person.py  response.py  uuid.py
app/routers/: address.py  healthcheck.py  person.py  uuid.py
tests/: conftest.py  constants.py  test_address_router.py  test_address_router_parameters.py  test_address_router_params.py  test_healthcheck_router.py  test_person_router.py  test_person_router_params.py  test_routers.py  test_uuid_router.py
tests/utils/: constants.py  helpers.py
