[tool.poetry]
name = "randomicu-fakedata"
version = "1.0.9"
description = "FastAPI backend for Random.icu Services"
authors = ["pythoninja"]

[tool.poetry.dependencies]
python = "^3.9"
mimesis = "^5.1.0"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
asyncpg = "^0.24.0"
databases = {extras = ["postgresql"], version = "^0.5.3"}
SQLAlchemy = "^1.4.26"
python-dotenv = "^0.19.1"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests = "^2.26.0"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
flake8-pytest-style = "^1.5.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
