[tool.poetry]
name = "randomicu-fakedata"
version = "1.0.9"
description = "FastAPI backend for Random.icu Services"
authors = ["pythoninja"]

[tool.poetry.dependencies]
python = "^3.9"
mimesis = "^5.2.1"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.3"}
asyncpg = "^0.25.0"
databases = {extras = ["postgresql"], version = "^0.5.5"}
SQLAlchemy = "^1.4.31"
python-dotenv = "^0.19.2"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
requests = "^2.27.1"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
flake8-pytest-style = "^1.6.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
