[tool.poetry]
name = "randomicu-fakedata"
version = "1.0.10"
description = "FastAPI backend for Random.icu Services"
authors = ["pythoninja"]

[tool.poetry.dependencies]
python = "^3.9"
mimesis = "^5.5.0"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
asyncpg = "^0.26.0"
databases = {extras = ["postgresql"], version = "^0.6.0"}
SQLAlchemy = "^1.4.46"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.28.1"
pre-commit = "^2.20.0"
flake8 = "^5.0.3"
flake8-pytest-style = "^1.6.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
